--- a/src/components/header/styles.css
+++ b/src/components/header/styles.css
@@ -2,12 +2,14 @@
   display: flex;
   top: 0;
   justify-content: space-evenly;
+  background-color: white;
   border-bottom: 0.1px solid lightgray;
   padding-top: 10px;
   padding-bottom: 10px;
   width: 100%;
   z-index: 999;
 }
+
 .header__left {
   display: flex;
 }
