--- a/src/components/Post/styles.css
+++ b/src/components/Post/styles.css
@@ -1,43 +1,33 @@
-.feed {
-  flex: 0.6;
-  margin: 0 20px;
-}
-
-.feed__inputContainer {
+.post {
   background-color: white;
-  padding: 10px;
-  padding-bottom: 20px;
+  padding: 15px;
+  margin-bottom: 10px;
   border-radius: 10px;
-  margin-bottom: 20px;
 }
 
-.feed__input {
-  border: 1px solid lightgray;
-  border-radius: 30px;
+.post__header {
   display: flex;
-  padding: 10px;
-  color: gray;
-  padding-left: 15px;
+  margin-bottom: 10px;
 }
 
-.feed__input > form {
-  display: flex;
-  width: 100%;
-}
-
-.feed__input > form > input {
-  border: none;
-  flex: 1;
+.post__info {
   margin-left: 10px;
-  outline-width: 0;
-  font-weight: 600;
 }
 
-.feed__input > form > button {
-  display: none;
+.post__info > p {
+  font-size: 12px;
+  color: gray;
 }
 
-.feed__inputOptions {
+.post__body {
+  overflow-wrap: anywhere;
+}
+
+.post__info > h2 {
+  font-size: 15px;
+}
+
+.post__buttons {
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-betwee;
 }
